[metadata]
name = dsms_docs
version = 1.0.0
description = Documentation project for the Dataspace Management System (DSMS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MI-FraunhoferIWM/dsms-docs
author = Lukas Morand, Matthias Büschelberger, Kiran Kumaraswamy, Yoav Nahshon
author_email = lukas.morand@iwm.fraunhofer.de, matthias.bueschelberger@iwm.fraunhofer.de, kiran.kumaraswamy@iwm.fraunhofer.de, yoav.nahshon@iwm.fraunhofer.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation

[options]
packages = find:
install_requires =
    sphinx==8.1.3
    myst-parser==4.0.0
    nbsphinx==0.9.6
    sphinx-autobuild==2024.10.3
    sphinx-book-theme==1.1.3
    sphinx-copybutton==0.5.2
    sphinx-design==0.6.1
    sphinxcontrib-plantuml==0.30
    sphinxcontrib-redoc==1.6.0
    jinja2==3.1.5
    ipython==8.31.0
    jupyter==1.1.1
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    ipython==8.31.0
    jinja2==3.1.5
    jupyter==1.1.1
docs =
    sphinx==8.1.3
    myst-parser==4.0.0
    nbsphinx==0.9.6
    sphinx-autobuild==2024.10.3
    sphinx-book-theme==1.1.3
    sphinx-copybutton==0.5.2
    sphinx-design==0.6.1
    sphinxcontrib-plantuml==0.30
    sphinxcontrib-redoc==1.6.0

[bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}
